Finish Minimap Info GUI and few other cleanups